--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-md-4 "></div>
       <div class="col-md-4">
         <h1 class="text-white text-center mt-3 p-3 bg-primary rounded">Registration Form</h1>
-        <form class="border border-3 border-primary p-5 rounded-5 bg-white  bg-opacity-50 text-white">
+        <form class="border border-3 border-primary p-5 rounded-5 bg-white  bg-opacity-75 text-dark">
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Username</label>
             <input type="text" class="form-control" id="username" aria-describedby="emailHelp">
